# mini-x

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.run/: main.run.xml
mini_x/: constants.py  errors.py  logging_config.py  main.py
mini_x/alembic/: env.py
mini_x/alembic/versions/: 6a04e2988aa9_create_blog_posts_table.py  b9dd868838e2_create_users_table.py
mini_x/api/: __init__.py
mini_x/api/v1/: dependancies.py
mini_x/api/v1/models/: blog.py  user.py
mini_x/api/v1/routes/: auth.py  blog.py  user.py
mini_x/authentication/: auth_handler.py
mini_x/infra/db/: session.py
mini_x/infra/db/models/: blog.py  user.py
mini_x/repositories/blog/: blog.py  blog_abc.py
mini_x/repositories/user/: user.py  user_abc.py
mini_x/services/blog/: blog_service.py  error.py
mini_x/services/user/: error.py  user_service.py
mini_x/settings/: app_settings.py  pg_database_settings.py  secrets_settings.py
tests/: conftest.py
tests/unit/authentication/: test_auth_handler.py
tests/unit/services/blog/: test_blog_service.py
tests/unit/services/user/: test_user_service.py
